HelloUltraviolet/Fixtures/RejectedSource/Expressions/ClosureParamInferenceRequirement/Source/Main.uv
//! Rejected closure specimen for the closure parameter inference requirement.

public procedure closureParamInferenceRequirementReference() -> i32 {
    let identity = |value| value
    return identity(1)
}
